syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "./invitation-category";

message InvitationCategoryPaging {
    int32 current_page = 1 [json_name = "current_page"];
    int32 total_page = 2 [json_name = "total_page"];
    int32 count = 3 [json_name = "count"];
}

message InvitationCategoryBaseResponse {
    string message = 1 [json_name = "message"];
    optional google.protobuf.Any data = 2 [json_name = "data"];
    optional InvitationCategoryPaging paging = 3 [json_name = "paging"];
}

message CreateInvitationCategoryRequest {
    string name = 1 [json_name = "name"];
}

message GetAllInvitationCategoryRequest {
    optional string search = 1 [json_name = "search"];
    optional int32 page = 2 [json_name = "page"];
    optional int32 limit = 3 [json_name = "limit"];
}

message GetAllInvitationCategoryResponse {
    string message = 1 [json_name = "message"];
    repeated GetInvitationCategoryByIDResponse data = 2 [json_name = "data"];
    InvitationCategoryPaging paging = 3 [json_name = "paging"];
}

message GetInvitationCategoryByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetInvitationCategoryByIDResponse {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    google.protobuf.Timestamp created_at = 3 [json_name = "created_at"];
    google.protobuf.Timestamp updated_at = 4 [json_name = "updated_at"];
    google.protobuf.Timestamp deleted_at = 5 [json_name = "deleted_at"];
}

message UpdateInvitationCategoryByIDRequest {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message DeleteInvitationCategoryByIDRequest {
    string id = 1 [json_name = "id"];
}